// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots default default 1`] = `
<div
  data-css-claeju=""
>
  <div>
    <div
      className="css-zhyi0r"
      onKeyDown={[Function]}
      role="tablist"
      tabIndex="0"
    >
      <button
        aria-selected={true}
        className="css-1pp0sr"
        id="example1"
        onClick={[Function]}
        role="tab"
        tabIndex="-1"
      >
        <div
          className="css-1vk06pf"
        >
          Menu 1
          <span
            className="css-1s34vsj"
          />
        </div>
      </button>
      <button
        aria-selected={false}
        className="css-1bb8k7d"
        id="example2"
        onClick={[Function]}
        role="tab"
        tabIndex="-1"
      >
        <div
          className="css-1vk06pf"
        >
          Menu 2
          <span
            className="css-1s34vsj"
          />
        </div>
      </button>
      <button
        aria-selected={false}
        className="css-1bb8k7d"
        id="example3"
        onClick={[Function]}
        role="tab"
        tabIndex="-1"
      >
        <div
          className="css-1vk06pf"
        >
          Menu 3
          <span
            className="css-1s34vsj"
          />
        </div>
      </button>
      <button
        aria-selected={false}
        className="css-1bb8k7d"
        id="example4"
        onClick={[Function]}
        role="tab"
        tabIndex="-1"
      >
        <div
          className="css-1vk06pf"
        >
          Menu 4
          <span
            className="css-1s34vsj"
          />
        </div>
      </button>
      <button
        aria-selected={false}
        className="css-1bb8k7d"
        id="example5"
        onClick={[Function]}
        role="tab"
        tabIndex="-1"
      >
        <div
          className="css-1vk06pf"
        >
          Menu 5
          <span
            className="css-1s34vsj"
          />
        </div>
      </button>
    </div>
    <div
      aria-labelledby="example3"
      className="css-nil"
      role="tabpanel"
    >
      <div
        className="content"
      >
        Menu stuff 3
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots default no items 1`] = `
<div
  data-css-claeju=""
>
  <div
    className="css-zhyi0r"
    onKeyDown={[Function]}
    role="tablist"
    tabIndex="0"
  />
</div>
`;

exports[`Storyshots style overrides list no borderBottom (style) 1`] = `
<div
  data-css-claeju=""
>
  <div
    className="css-zhyi0r"
    onKeyDown={[Function]}
    role="tablist"
    style={
      Object {
        "borderBottom": "none",
      }
    }
    tabIndex="0"
  >
    <button
      aria-selected={true}
      className="css-1pp0sr"
      id="wow"
      onClick={[Function]}
      role="tab"
      tabIndex="-1"
    >
      <div
        className="css-1vk06pf"
      >
        Wow
        <span
          className="css-1s34vsj"
        />
      </div>
    </button>
  </div>
</div>
`;

exports[`Storyshots style overrides listItem disabled opacity (style) 1`] = `
<div
  data-css-claeju=""
>
  <div
    className="css-zhyi0r"
    onKeyDown={[Function]}
    role="tablist"
    tabIndex="0"
  >
    <button
      aria-selected={true}
      className="css-1pp0sr"
      id="wow"
      onClick={[Function]}
      role="tab"
      style={
        Object {
          "opacity": 0.5,
        }
      }
      tabIndex="-1"
    >
      <div
        className="css-1vk06pf"
      >
        Disabled look
        <span
          className="css-1s34vsj"
        />
      </div>
    </button>
  </div>
</div>
`;

exports[`Storyshots style overrides panel disabled opacity (style) 1`] = `
<div
  data-css-claeju=""
>
  <div>
    <div
      className="css-zhyi0r"
      onKeyDown={[Function]}
      role="tablist"
      tabIndex="0"
    >
      <button
        aria-selected={true}
        className="css-1pp0sr"
        id="wow"
        onClick={[Function]}
        role="tab"
        style={
          Object {
            "opacity": 0.5,
          }
        }
        tabIndex="-1"
      >
        <div
          className="css-1vk06pf"
        >
          Disabled look
          <span
            className="css-1s34vsj"
          />
        </div>
      </button>
    </div>
    <div
      aria-labelledby="wow"
      className="css-nil"
      role="tabpanel"
      style={
        Object {
          "border": "1px solid red",
        }
      }
    >
      This is the content
    </div>
  </div>
</div>
`;
